Refactor ProgressController to use a unified updateProgressBar method for cleaner code and improved readability. Introduce ProgressData record to encapsulate progress bar data. Update ProgressTask to simplify progress update logic. Enhance NeutralToNodeFormatter by extracting label and progress handling into separate methods for better organization. Modify FullServer and Server classes to utilize NetworkConnectionLimit instead of ConnectionLimit for improved connection management. Replace Date with Instant in WebSession and various action classes for better time handling. Refactor Worker class to use composition over inheritance, leveraging virtual threads for background tasks. Clean up classpath entries in jrmserver and jrmstandalone projects.